--- a/FaceTek/My Team/MyTeamtblCell.xib
+++ b/FaceTek/My Team/MyTeamtblCell.xib
@@ -20,12 +20,14 @@
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="im9-VT-BD2">
                         <rect key="frame" x="0.0" y="3" width="378" height="60"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="leave_user.png" translatesAutoresizingMaskIntoConstraints="NO" id="ofI-Pp-wyI">
+                                <rect key="frame" x="26" y="13" width="35" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="leaves.png" translatesAutoresizingMaskIntoConstraints="NO" id="ofI-Pp-wyI">
-                        <rect key="frame" x="21" y="13" width="48" height="40"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ruh-72-zfa">
                         <rect key="frame" x="74" y="10" width="284" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -45,12 +47,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="MobilenumberLbl" destination="j5V-jD-Sc5" id="PFU-xf-yM1"/>
+                <outlet property="img" destination="ofI-Pp-wyI" id="V7F-tc-Q7b"/>
                 <outlet property="nameLbl" destination="Ruh-72-zfa" id="Z04-6E-mqM"/>
             </connections>
             <point key="canvasLocation" x="179.71014492753625" y="100.11160714285714"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="leaves.png" width="48" height="48"/>
+        <image name="leave_user.png" width="28.799999237060547" height="28.799999237060547"/>
     </resources>
 </document>
