--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -4217,6 +4217,7 @@
                         <outlet property="Adresstxtview" destination="9Ef-7V-Dcv" id="4ne-hU-g26"/>
                         <outlet property="Cancelbtn" destination="8ya-AR-Mzo" id="x7g-aa-wp7"/>
                         <outlet property="ClientTxtfld" destination="A92-9t-XJ8" id="cVd-cy-rIb"/>
+                        <outlet property="ClientView" destination="EJB-Tu-smO" id="1vY-wy-6zB"/>
                         <outlet property="DrpDownview" destination="vRs-Jl-fnW" id="aBn-Du-3cP"/>
                         <outlet property="FieldVisitIn_PopupView" destination="d4e-PT-G0v" id="6Ah-Y3-20O"/>
                         <outlet property="FieldVisitInbtn" destination="KqN-hj-9Xl" id="xfR-80-8AA"/>
