working On My Team Polyline loading
working On My Team Polyline loading

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -4355,15 +4355,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oPY-8L-hiu">
-                                <rect key="frame" x="67" y="53" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nc0-Wh-ywR" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nc0-Wh-ywR" firstAttribute="top" secondItem="JLc-UV-iyC" secondAttribute="top" id="7h4-Oi-cRx"/>
+                            <constraint firstItem="nc0-Wh-ywR" firstAttribute="leading" secondItem="KZI-2m-52J" secondAttribute="leading" id="Xw1-bO-l61"/>
+                            <constraint firstItem="nc0-Wh-ywR" firstAttribute="bottom" secondItem="JLc-UV-iyC" secondAttribute="bottom" id="b6f-4m-UUB"/>
+                            <constraint firstItem="nc0-Wh-ywR" firstAttribute="trailing" secondItem="JLc-UV-iyC" secondAttribute="trailing" id="dUd-Nb-kpg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="JLc-UV-iyC"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="nc0-Wh-ywR" id="a5Z-PY-Zn5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCa-u5-OSo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
